2004-04-01  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/TipOfTheDay.cs: make same change here.

2004-04-01  Todd Berman  <tberman@sevenl.net>

	* Commands/AutostartCommands.cs: default to false for ShowToTD

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/CommonAboutDialog.cs: fixing the string stuff.
	* Makefile.am: adding -codepage:utf8

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/CommonAboutDialog.cs: adding miguel :)

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/AbstractProject.cs: dont include *.swp, *~ or .* in
	search for new files. closes bug #56282.

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/ProjectBrowser/ProjectBrowserView.cs: fix bug #56273, rename
	Projects tab to Combine.

2004-03-31  John Luke  <jluke@cfl.rr.com>

	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs:
	use stock buttons and put the MessageDialog in a using {}	

2004-03-30  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/ClassScout/ClassScout.cs: stop using Gdk.Threads.Enter and
	.Leave, as they can cause deadlocks, using a GLib.IdleHandler instead.
	Closes bug #56260

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/ClassScout/ClassScout.cs: partial fix to bug with double
	clicking not setting focus properly.

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* Commands/RunCommands.cs: When you run, you need to make sure the
	compile completed properly.
	* Gui/Workbench/Layouts/SdiWorkspaceWindow.cs: Mark file/project dirty
	if it becomes dirty, relying on unsaved files is not acceptable.

2004-03-28  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: re-add try catch to
	prevent exceptions from percolating up and blowing up. closes bug
	#56128

2004-03-28  John Luke  <jluke@cfl.rr.com>

	* Services/ParserService/DefaultParserService.cs:
	if filename == null don't switch on it
	* Gui/Pads/TerminalPad.cs: add but dont build yet
