@@ -1,3 +1,8 @@
+2004-04-01  John Luke  <jluke@cfl.rr.com>
+	
+	* Internal/ExternalTool/ExternalTool.cs:
+	store UseOutputPad in xml file
+
 2004-04-01  Todd Berman  <tberman@sevenl.net>
 
 	* Gui/Dialogs/TipOfTheDay.cs: make same change here.
